# paporg

./: .gitignore  Cargo.toml  LICENSE  Makefile  cliff.toml  docker-compose.observability.yml  lefthook.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/paporg/: Cargo.toml
crates/paporg/src/: error.rs  lib.rs  profiling.rs  sanitize.rs  secrets.rs
crates/paporg/src/ai/: mod.rs  model_manager.rs  suggester.rs  suggester_stub.rs
crates/paporg/src/broadcast/: git_progress.rs  job_progress.rs  job_store.rs  log_broadcaster.rs  mod.rs
crates/paporg/src/categorizer/: matcher.rs  mod.rs
crates/paporg/src/config/: loader.rs  mod.rs  schema.rs  variables.rs
crates/paporg/src/db/: email_repo.rs  error.rs  job_repo.rs  migrations.rs  mod.rs  oauth_repo.rs  stats_repo.rs
crates/paporg/src/db/entities/: job.rs  mod.rs  oauth_token.rs  processed_email.rs
crates/paporg/src/db/migrations/: m20240130_000001_create_jobs_table.rs  m20260131_000001_create_processed_emails_table.rs  m20260201_000001_create_oauth_tokens_table.rs  m20260202_000001_add_mime_type_to_jobs.rs  m20260204_000001_add_ocr_text_to_jobs.rs  mod.rs
crates/paporg/src/db/sql/: 002_create_processed_emails.sql  003_create_oauth_tokens.sql  004_add_mime_type.sql  005_drop_ocr_text.sql  006_create_processing_stats.sql
crates/paporg/src/email/: client.rs  device_auth.rs  error.rs  mod.rs  parser.rs  scanner.rs  tracker.rs
crates/paporg/src/gitops/: error.rs  git.rs  loader.rs  mod.rs  progress.rs  reconciler.rs  resource.rs  sync_scheduler.rs  validation.rs  watcher.rs
crates/paporg/src/gitops/git/: auth.rs  mod.rs  parse.rs  repository.rs  types.rs
crates/paporg/src/pipeline/: config.rs  context.rs  error.rs  mod.rs  progress.rs  runner.rs
crates/paporg/src/processor/: docx.rs  image.rs  mod.rs  ocr.rs  pdf.rs  text.rs
crates/paporg/src/storage/: filesystem.rs  mod.rs  symlink.rs
crates/paporg/src/worker/: job.rs  mod.rs  multi_scanner.rs  pool.rs  scanner.rs
examples/: business-documents.json  minimal.json  multilingual.json  personal-documents.json
observability/: prometheus.yaml  tempo.yaml
observability/grafana/provisioning/datasources/: datasources.yaml
schema/: config-v1.json
scripts/: pre-commit
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: events.rs  main.rs  state.rs  tray.rs
src-tauri/src/commands/: ai.rs  analytics.rs  config.rs  database.rs  email.rs  files.rs  git.rs  gitops.rs  jobs.rs  mod.rs  secrets.rs  upload.rs  workers.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: 001_create_jobs.sql  002_create_processed_emails.sql  004_add_mime_type.sql
tests/: categorization_tests.rs  config_loading_tests.rs  e2e.rs  variable_tests.rs
tests/common/: builders.rs  harness.rs  mod.rs
tests/fixtures/: sample_config.json
tests/fixtures/configs/: basic-rules.json  compound-conditions.json  priority-rules.json  symlink-config.json  variable-extraction.json
tests/fixtures/gitops/bad-rule/: settings.yaml
tests/fixtures/gitops/invalid/: invalid_regex.yaml  missing_api_version.yaml  wrong_api_version.yaml
tests/fixtures/gitops/invalid-yaml/: settings.yaml
tests/fixtures/gitops/missing-version/: settings.yaml
tests/fixtures/gitops/valid/: settings.yaml
tests/fixtures/inputs/: active-contract.txt  complex-variables.txt  contract.txt  draft-invoice.txt  empty-vendor.txt  invoice-receipt.txt  invoice.md  invoice.txt  long-lines.txt  multi-vendor.txt  random.txt  receipt.txt  rechnung.txt  recu.txt  tax-invoice.txt  triple-match.txt  unicode-invoice.txt  whitespace.txt
tests/gitops/: loader_test.rs  mod.rs
web/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
web/src/: index.css  main.tsx  router.tsx
web/src/api/: index.ts  logs.ts  unwrap.test.ts
web/src/collections/: branches.ts  file-tree.ts  git-status.ts  index.ts  resources.ts  settings.ts
web/src/components/: UpdateDialog.tsx  mode-toggle.tsx  theme-provider.tsx
web/src/components/dashboard/: StatCard.tsx  UnsortedWorkflow.tsx
web/src/components/email/: TokenStatusCard.tsx
web/src/components/form/: ArrayField.tsx  DateField.tsx  FormField.tsx  NumberField.tsx  PathField.tsx  PatternField.tsx  SecretField.tsx  SelectField.tsx  SwitchField.tsx  TextField.tsx  index.ts
web/src/components/forms/: ImportSourceForm.tsx  MatchConditionBuilder.tsx  RuleForm.tsx  SettingsForm.tsx  VariableForm.tsx  index.ts
web/src/components/gitops/: BranchSelector.tsx  CommitDialog.tsx  ConflictDialog.tsx  CreateResourceDialog.tsx  FileTree.tsx  FileTreeItem.tsx  GitInitializeBanner.tsx  GitProgressIndicator.tsx  GitProgressPanel.tsx  GitStatus.tsx  GitStatusIndicator.tsx  ResourceEditor.tsx
web/src/components/jobs/: CreateRuleFromJobDialog.tsx  JobsTable.tsx
web/src/components/layout/: AppSidebar.tsx  Header.tsx
web/src/components/logs/: LogEntry.tsx  LogFilter.tsx  LogViewer.tsx
web/src/components/organization/: CreateFolderDialog.tsx  FolderTreeView.tsx
web/src/contexts/: GitOpsContext.tsx  GitProgressContext.tsx  JobsContext.tsx  LogStreamContext.tsx  SelectedFileContext.tsx  SseContext.tsx
web/src/hooks/: use-config-change-invalidation.ts  use-update-checker.ts  useAiSuggestions.ts  useAutoSave.ts  useGitProgress.ts  useIsMounted.ts  useJobOcr.ts  useJobProgress.test.ts  useJobProgress.ts  useStats.test.ts  useStats.ts  useUpload.test.ts  useUpload.ts
web/src/lib/: database.ts  form-utils.test.ts  form-utils.ts  query-client.ts
web/src/mutations/: use-gitops-mutations.ts
web/src/pages/: JobsPage.tsx
web/src/queries/: index.ts  use-branches.ts  use-file-tree.ts  use-git-status.ts  use-resource.ts  use-settings.ts
web/src/routes/: __root.tsx  dashboard.tsx  git-sync.tsx  help.tsx  logs.tsx  settings.tsx
web/src/schemas/: resources.test.ts  resources.ts
web/src/test/: setup.ts
web/src/types/: ai.ts  api.ts  config.ts  gitops.ts  jobs.ts  upload.ts
web/src/utils/: analytics.ts  jobs.ts  ruleShare.test.ts  ruleShare.ts
(+29 files in other folders)
