[workspace]
members = ["crates/paporg", "src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["sync", "rt-multi-thread", "macros", "process", "io-util"] }
log = "0.4"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
thiserror = "1.0"

[profile.release]
lto = "thin"
strip = true
