[package]
name = "paporg-desktop"
version.workspace = true
edition.workspace = true
description = "Paporg desktop application built with Tauri"
authors = ["iperka"]
license = "MIT"
repository = "https://github.com/iperka/paporg"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-updater = "2.0"

serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
tokio.workspace = true
log.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true
chrono.workspace = true
regex = "1.10"
secrecy = "0.10"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
dirs = "5.0"

# Database (Tauri SQL plugin)
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

# Import paporg as library
paporg = { path = "../crates/paporg" }

# OpenTelemetry (optional, behind `otel` feature)
opentelemetry = { version = "0.28", optional = true }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic"], optional = true }
tracing-opentelemetry = { version = "0.29", optional = true }
tracing-loki = { version = "0.2", optional = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
ai = ["paporg/ai"]
otel = [
    "paporg/otel",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
    "dep:tracing-loki",
]
# Enable devtools for development builds only
devtools = ["tauri/devtools"]
