[package]
name = "paporg"
version.workspace = true
edition.workspace = true
description = "Document processing and organization tool with OCR and GitOps-style configuration"
authors = ["iperka"]
license = "MIT"
repository = "https://github.com/iperka/paporg"
homepage = "https://github.com/iperka/paporg"
readme = "../../README.md"
keywords = ["document", "ocr", "organization", "automation"]
categories = ["command-line-utilities", "filesystem"]

[lib]
path = "src/lib.rs"

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"

# Platform directories
dirs = "5.0"

# JSON Schema validation
jsonschema = "0.41"

# Concurrency
crossbeam-channel = "0.5"
num_cpus = "1.16"

# Directory scanning & watching
walkdir = "2.5"
notify = "6.1"
notify-debouncer-mini = "0.4"
glob = "0.3"

# Document processing
lopdf = "0.33"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff", "webp"] }
leptess = "0.14"
zip = "2.0"
quick-xml = "0.36"

# Utilities
regex = "1.10"
chrono.workspace = true
uuid = { version = "1.8", features = ["v4"] }
thiserror.workspace = true
mime_guess = "2.0"

# Logging
log.workspace = true
env_logger = "0.11"

# Database (SeaORM)
sea-orm = { version = "1.0", features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres"] }
sea-orm-migration = "1.0"
async-trait = "0.1"

# Signal handling
ctrlc = "3.4"

# Async runtime
tokio.workspace = true
futures-util = "0.3"

# AI / LLM inference (optional, requires C++ toolchain)
llama-cpp-2 = { version = "0.1", optional = true }
hf-hub = { version = "0.4", optional = true }

# Email import source
async-imap = "0.10"
async-native-tls = "0.5"
async-io = "2.3"
mail-parser = "0.9"
secrecy = "0.10"
base64 = "0.22"

# HTTP client for OAuth2 device flow
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Token encryption (^0.10.3 for RUSTSEC-2023-0096 fix, bounded to 0.10.x)
aes-gcm = "^0.10.3"
getrandom = "0.2"

# TTL cache for pending OAuth authorizations
moka = { version = "0.12", features = ["sync"] }

[features]
default = []
ai = ["llama-cpp-2", "hf-hub"]

[dev-dependencies]
tempfile = "3.10"
assert_fs = "1.1"
serial_test = "3.0"
