[package]
name = "paporg"
version.workspace = true
edition.workspace = true
description = "Document processing and organization tool with OCR and GitOps-style configuration"
authors = ["iperka"]
license = "MIT"
repository = "https://github.com/iperka/paporg"
homepage = "https://github.com/iperka/paporg"
readme = "../../README.md"
keywords = ["document", "ocr", "organization", "automation"]
categories = ["command-line-utilities", "filesystem"]

[lib]
path = "src/lib.rs"

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"

# Platform directories
dirs = "5.0"

# JSON Schema validation
jsonschema = "0.18"

# Concurrency
crossbeam-channel = "0.5"
num_cpus = "1.16"

# Directory scanning & watching
walkdir = "2.5"
notify = "6.1"
notify-debouncer-mini = "0.4"
glob = "0.3"

# Document processing
lopdf = "0.33"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff", "webp"] }
leptess = "0.14"
zip = "2.0"
quick-xml = "0.36"

# Utilities
regex = "1.10"
chrono.workspace = true
uuid = { version = "1.8", features = ["v4"] }
thiserror.workspace = true
mime_guess = "2.0"

# Logging / Tracing
log.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true

# Database (rusqlite)
rusqlite.workspace = true

# Signal handling
ctrlc = "3.4"

# Async runtime
tokio.workspace = true
futures-util = "0.3"

# AI / LLM inference (optional, requires C++ toolchain)
llama-cpp-2 = { version = "0.1", optional = true }
hf-hub = { version = "0.4", optional = true }

# Email import source
async-imap = "0.10"
async-native-tls = "0.5"
async-io = "2.3"
mail-parser = "0.9"
secrecy = "0.10"
base64 = "0.22"

# HTTP client for OAuth2 device flow
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Token encryption (^0.10.3 for RUSTSEC-2023-0096 fix, bounded to 0.10.x)
aes-gcm = "^0.10.3"
getrandom = "0.2"

# TTL cache for pending OAuth authorizations
moka = { version = "0.12", features = ["sync"] }

# OpenTelemetry (optional, behind `otel` feature)
opentelemetry = { version = "0.28", optional = true }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic"], optional = true }
tracing-opentelemetry = { version = "0.29", optional = true }
tracing-loki = { version = "0.2", optional = true }

# Continuous profiling (optional, behind `otel` feature)
pprof = { version = "0.14", features = ["flamegraph", "prost-codec"], optional = true }

[features]
default = []
ai = ["llama-cpp-2", "hf-hub"]
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
    "dep:tracing-loki",
    "dep:pprof",
]

[dev-dependencies]
tempfile = "3.10"
assert_fs = "1.1"
serial_test = "3.0"
